[gd_scene load_steps=7 format=2]

[ext_resource path="res://01_JG/PersistantScene/PersistantScene.gd" type="Script" id=1]
[ext_resource path="res://01_JG/Audio/SFX/Scripts/SFXManager.gd" type="Script" id=2]
[ext_resource path="res://01_JG/Localization/Localizer.gd" type="Script" id=3]
[ext_resource path="res://01_JG/SimpleSaver/SimpleSettings.gd" type="Script" id=4]
[ext_resource path="res://01_JG/Audio/Music/Scripts/MusicController.gd" type="Script" id=5]
[ext_resource path="res://01_JG/LevelsManager/LevelsManager.tscn" type="PackedScene" id=6]

[node name="PersistantScene" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="SimpleSettings" type="Node" parent="."]
script = ExtResource( 4 )

[node name="SFXManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="MusicController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Localizer" type="Node" parent="."]
script = ExtResource( 3 )

[node name="LevelsManager" parent="." instance=ExtResource( 6 )]
